--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -1,3 +1,5 @@
+<!--the assignment link: https://aweinmacher.github.io/coursera-fullstack/module4-solution/index.html-->
+
 <!DOCTYPE html>
 <html>
 <head>
